First test passed Co-authored-by: Brianca Knight <briancaknight@gmail.com>

--- a/PingPong.Tests/PingPong.Tests.csproj
+++ b/PingPong.Tests/PingPong.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ping-pong\ping-pong.csproj" />  
+    <ProjectReference Include="..\ping-pong\PingPong.csproj" />  
   </ItemGroup>
 
 </Project>
